--- a/HW2.tex
+++ b/HW2.tex
@@ -45,11 +45,11 @@ We can determine which direction to turn these knobs so we can adjust parameters
 
 \intermediatesubproblem{Explain what is meant by the perceptron. A good answer would discuss what the inputs and outputs are.}
 \\\\ 
-Perceptron is a neural network model that takes multiple inputs, it also produces outputs that are binary numbers based on the inputs. \\The input could be represented as a vector $x=x_1,x_2,...,x_n$. The weights of each input $x_i$ are associated with a weight $w_i$. The weight determines the importance of each input. The perceptron also has a bias $b$, which is a threshold for the model to shift the condition of the final choice.\\ The perceptron computes a weighted summation of the inputs, including the bias using the formula: $z = \sum_{i=1}^{n}{w_ix_i +b}$. \\Then using z we would pass it into an activation function, this function would output(0 or 1): if z $\geq$ 0 is not something/choices you wanted to make or do, and z $\leq$1 if the inputs are something/choices you wanted to make or to do. \\This decision-making process is what allows the machine using perceptron to differentiate the difference between a good choice and a bad choice. \vspace{5mm}
+Perceptron is a neural network model that takes multiple inputs, it also produces outputs that are binary numbers based on the inputs. \\The input could be represented as a vector $x=x_1,x_2,...,x_n$. The weights of each input $x_i$ are associated with a weight $w_i$. The weight determines the importance of each input. The perceptron also has a bias $b$, which is a threshold for the model to shift the condition of the final choice.\\ The perceptron computes a weighted summation of the inputs, including the bias using the formula: $z = \sum_{i=1}^{n}{w_ix_i +b}$. \\Then using z we would pass it into an activation function, this function would output(0 or 1): if z $\geq$ 0 is not something/choices you wanted to make or do, and z $\leq$1 if the inputs are something/choices you wanted to make or to do. \\This decision-making process allows the machine to use perceptron to differentiate the difference between a good and a bad choice. \vspace{5mm}
 
 \intermediatesubproblem{In the perceptron, what function do we use to compute the output?}
 \\\\
-We use the activation function to compute the output. The function output is either 0 or 1, depends on the weighted sum is positive or negative. Like this function: \[
+We use the activation function to compute the output. The function output is either 0 or 1, depending on whether the weighted sum is positive or negative. Like this function: \[
 f(x) =\begin{cases}1 & \text{if } x \geq 0 \\0 & \text{if } x < 0
 \end{cases}
 \]
@@ -69,21 +69,33 @@ Suppose $x_1 = 1, x_2 = 0, x_3 = 1$. Also suppose that $b_{1}^{[1]} = -0.89 $. C
 \\\\
 \underline{Weights:} $w_1 =0.1, w_2 =0.4,w3 =0.8$ \\ 
 \underline{Inputs:}$x_1 =1, x_2=0,x_3=1$\\
-\underline{Bias:}$$\\
+\underline{Bias:}$b_1^{[1]}=-0.89$\\
 
+\underline{Weighted Sum:} $S = (1*0.1)+(0*0.4)+(1*0.8)+(-0.89)$\\
+\underline{Weighted Sum:} $S = 0.1+0+0.8-0.89=0.01 $\\
+Since S is greater than and equal to 0, the perceptron output is 1. 
 \vspace{5mm} 
 
 \intermediatesubproblem{In class, we stated that for the perceptron, small changes in the input can produce large changes in the output. Suppose we have the same perceptron as outlined above where $x_1 = 1, x_2 = 0, x_3 = 1$ and this time, $b_{1}^{[1]} = -0.9 $. What is the perceptron's output now?}
+\\\\
+\underline{Weights:} $w_1 =0.1, w_2 =0.4,w3 =0.8$ \\ 
+\underline{Inputs:}$x_1 =1, x_2=0,x_3=1$\\
+\underline{Bias:}$b_1^{[1]}=-0.9$\\
 
-\vspace{5mm}
+\underline{Weighted Sum:} $S = (1*0.1)+(0*0.4)+(1*0.8)+(-0.89)$\\
+\underline{Weighted Sum:} $S = 0.1+0+0.8-0.9=0 $\\
+Since S is greater than and equal to 0, the perceptron output is still 1. 
+\vspace{20mm}
 
 \intermediatesubproblem{In class, we stated that there were two fundamental restrictions with the perceptron. What are these restrictions/problems?}
-
+\\ \\
+1. The problem is that small changes to our knobs/parameters can yield large changes in output and can only solve problems that cannot be divided by a straight line (not linear).\\
+2. The restriction is that the input is rigid since it's either 0 or 1. Making it hard to differentiate, which prevents the use of gradient descent algorithm. 
 \vspace{5mm}
 
 
 \intermediatesubproblem{Read the article found here: \url{https://news.cornell.edu/stories/2019/09/professors-perceptron-paved-way-ai-60-years-too-soon}. According to the article, what was one of the problems with Roseblatt's perceptron?}
-
+\\\\The problems with Roseblatt's perceptron is that it only have 1 neurons.
 \end{enumerate}
 
 \vspace{5mm}
