--- a/HW2.tex
+++ b/HW2.tex
@@ -120,17 +120,19 @@ Sigmoid neuron is more flexible than the perceptron because it makes smooth chan
 
 Suppose the activation function is now the sigmoid function. Compute the output of the sigmoid neuron
 when $x_1 = 1, x_2 = 0, x_3 = 1$. (This is the same input as before in Problem 2 part $(c)$).}
-
-\vspace{30mm}
+\\\\
+\centerline{\underline{Weights:} $w_1 =0.1, w_2 =0.4,w3 =0.8$ }
+\centerline{\underline{Wighted Sum Formula:}}
+\centerline{\underline{Weighted Sum:} $S = (1*0.1)+(0*0.4)+(1*0.8)+(-0.89)$}\\
+\vspace{5mm}
 
 \intermediatesubproblem{Allow us to now show that a small change in the weights/bias produces small changes in the output. Suppose we have the same sigmoid neuron as outlined above where $x_1 = 1, x_2 = 0, x_3 = 1$ and this time, $b_{1}^{[1]} = -0.9 $. What is the sigmoid neuron's output now?}
 
-\vspace{30mm}
+\vspace{5mm}
 
 
 \intermediatesubproblem{What conclusion can you draw regarding small changes in the weights/bias with the perceptron versus the sigmoid neuron?}
-
-\newpage
+\vspace{5mm}
 
 \intermediatesubproblem{Compute $a_{1}^{[1]}$ in the neural network below. Assume that $x_1 = 1.2, x_2 = 0.05$, $x_3 = 0.6530$ and use the sigmoid function for the activation function. }
 \begin{figure}[h!]
@@ -138,7 +140,7 @@ when $x_1 = 1, x_2 = 0, x_3 = 1$. (This is the same input as before in Problem 2
     \includegraphics[width=0.8\linewidth]{NN2.png}
 \end{figure}
 
-\vspace{30mm}
+\vspace{20mm}
 
 \intermediatesubproblem{Compute $a_{2}^{[1]}$. Assume that $x_1 = 1.2, x_2 = 0.05$, $x_3 = 0.6530$ and use the sigmoid function for the activation function.}
 
