--- a/HW2.tex
+++ b/HW2.tex
@@ -122,9 +122,12 @@ Suppose the activation function is now the sigmoid function. Compute the output 
 when $x_1 = 1, x_2 = 0, x_3 = 1$. (This is the same input as before in Problem 2 part $(c)$).}
 \\\\
 \centerline{\underline{Weights:} $w_1 =0.1, w_2 =0.4,w3 =0.8$ }
-\centerline{\underline{Wighted Sum Formula:}}
+\centerline{\underline{Wighted Sum Formula:} $S = w_1x_1+w_2x_2+w_3+x_3+b_{1}^{[1]}$}
 \centerline{\underline{Weighted Sum:} $S = (1*0.1)+(0*0.4)+(1*0.8)+(-0.89)$}\\
-\vspace{5mm}
+\centerline{\underline{Weight Sum:} $S=0.01$}
+\\ \centerline{$\sigma(0.01) = \frac{1}{1+e^{(-0.01)}} \approx 0.5025$} \\ 
+\centerline{The output of the sigmoid neuron is 0.5025.}
+\vspace{1mm}
 
 \intermediatesubproblem{Allow us to now show that a small change in the weights/bias produces small changes in the output. Suppose we have the same sigmoid neuron as outlined above where $x_1 = 1, x_2 = 0, x_3 = 1$ and this time, $b_{1}^{[1]} = -0.9 $. What is the sigmoid neuron's output now?}
 
