--- a/HW2.tex
+++ b/HW2.tex
@@ -67,13 +67,12 @@ f(x) =\begin{cases}1 & \text{if } x \geq 0 \\0 & \text{if } x < 0
 Suppose $x_1 = 1, x_2 = 0, x_3 = 1$. Also suppose that $b_{1}^{[1]} = -0.89 $. Compute the perceptron's output. Hint: remember that a perceptron's output is either 0 or 1.
 }
 \\\\
-\underline{Weights:} $w_1 =0.1, w_2 =0.4,w3 =0.8$ \\ 
-\underline{Inputs:}$x_1 =1, x_2=0,x_3=1$\\
-\underline{Bias:}$b_1^{[1]}=-0.89$\\
-
-\underline{Weighted Sum:} $S = (1*0.1)+(0*0.4)+(1*0.8)+(-0.89)$\\
-\underline{Weighted Sum:} $S = 0.1+0+0.8-0.89=0.01 $\\
-Since S is greater than and equal to 0, the perceptron output is 1. 
+\centerline{\underline{Weights:} $w_1 =0.1, w_2 =0.4,w3 =0.8$} \\ 
+\centerline{\underline{Inputs:}$x_1 =1, x_2=0,x_3=1$}\\
+\centerline{\underline{Bias:}$b_1^{[1]}=-0.89$}\\
+\centerline{\underline{Weighted Sum:} $S = (1*0.1)+(0*0.4)+(1*0.8)+(-0.89)$}
+\centerline{\underline{Weighted Sum:} $S = 0.1+0+0.8-0.89=0.01 $}\\
+\centerline{Since S is greater than and equal to 0, the perceptron output is 1.} 
 \vspace{5mm} 
 
 \intermediatesubproblem{In class, we stated that for the perceptron, small changes in the input can produce large changes in the output. Suppose we have the same perceptron as outlined above where $x_1 = 1, x_2 = 0, x_3 = 1$ and this time, $b_{1}^{[1]} = -0.9 $. What is the perceptron's output now?}
