--- a/HW2.tex
+++ b/HW2.tex
@@ -67,34 +67,31 @@ f(x) =\begin{cases}1 & \text{if } x \geq 0 \\0 & \text{if } x < 0
 Suppose $x_1 = 1, x_2 = 0, x_3 = 1$. Also suppose that $b_{1}^{[1]} = -0.89 $. Compute the perceptron's output. Hint: remember that a perceptron's output is either 0 or 1.
 }
 \\\\
-\centerline{\underline{Weights:} $w_1 =0.1, w_2 =0.4,w3 =0.8$} \\ 
+\centerline{\underline{Weights:} $w_1 =0.1, w_2 =0.4,w_3 =0.8$} \\ 
 \centerline{\underline{Inputs:}$x_1 =1, x_2=0,x_3=1$}\\
 \centerline{\underline{Bias:}$b_1^{[1]}=-0.89$}\\
 \centerline{\underline{Weighted Sum:} $S = (1*0.1)+(0*0.4)+(1*0.8)+(-0.89)$}
 \centerline{\underline{Weighted Sum:} $S = 0.1+0+0.8-0.89=0.01 $}\\
 \centerline{Since S is greater than and equal to 0, the perceptron output is 1.} 
-\vspace{5mm} 
-
+\vspace{1mm} 
 \intermediatesubproblem{In class, we stated that for the perceptron, small changes in the input can produce large changes in the output. Suppose we have the same perceptron as outlined above where $x_1 = 1, x_2 = 0, x_3 = 1$ and this time, $b_{1}^{[1]} = -0.9 $. What is the perceptron's output now?}
-\\\\
-\underline{Weights:} $w_1 =0.1, w_2 =0.4,w3 =0.8$ \\ 
-\underline{Inputs:}$x_1 =1, x_2=0,x_3=1$\\
-\underline{Bias:}$b_1^{[1]}=-0.9$\\
-
-\underline{Weighted Sum:} $S = (1*0.1)+(0*0.4)+(1*0.8)+(-0.89)$\\
-\underline{Weighted Sum:} $S = 0.1+0+0.8-0.9=0 $\\
-Since S is greater than and equal to 0, the perceptron output is still 1. 
-\vspace{20mm}
+\\
+\centerline{\underline{Weights:} $w_1 =0.1, w_2 =0.4,w_3 =0.8$} \\ 
+\centerline{\underline{Inputs:}$x_1 =1, x_2=0,x_3=1$}\\
+\centerline{\underline{Bias:}$b_1^{[1]}=-0.9$}\\
+\centerline{\underline{Weighted Sum:} $S = (1*0.1)+(0*0.4)+(1*0.8)+(-0.89)$}\\
+\centerline{\underline{Weighted Sum:} $S = 0.1+0+0.8-0.9=0 $}\\
+\centerline{Since S is greater than and equal to 0, the perceptron output is still 1.} 
 
 \intermediatesubproblem{In class, we stated that there were two fundamental restrictions with the perceptron. What are these restrictions/problems?}
-\\ \\
+\\\\
 1. The problem is that small changes to our knobs/parameters can yield large changes in output and can only solve problems that cannot be divided by a straight line (not linear).\\
-2. The restriction is that the input is rigid since it's either 0 or 1. Making it hard to differentiate, which prevents the use of gradient descent algorithm. 
+2. The restriction is that the input is rigid since it's either 0 or 1. This makes it hard to differentiate, which prevents the use of a gradient descent algorithm. 
 \vspace{5mm}
 
 
 \intermediatesubproblem{Read the article found here: \url{https://news.cornell.edu/stories/2019/09/professors-perceptron-paved-way-ai-60-years-too-soon}. According to the article, what was one of the problems with Roseblatt's perceptron?}
-\\\\The problem with Roseblatt's perceptron is that it only has 1 neuron, while modern neural networks have millions of neurons. Since the perceptron only has 1 neuron it was limited to only doing one decision. If it were to have millions of neurons it would be able to model complex decisions. But, as Minsky says "the functions are just too simple". This shows the problem with Roseblatt's perceptron because it only has 1 neuron, and it's just too simple and not like today, where a neural network would have millions and millions of neurons. 
+\\\\The problem with Roseblatt's perceptron is that it only has 1 neuron, while modern neural networks have millions of neurons. Since the perceptron only has 1 neuron it was limited to only doing one decision. If it were to have millions of neurons it would be able to model complex choices. But, as Minsky says "the functions are just too simple". This shows the problem with Roseblatt's perceptron because it only has 1 neuron, and it's just too simple and not like today, where a neural network would have millions and millions of neurons. 
 \end{enumerate}
 
 \vspace{5mm}
@@ -105,22 +102,21 @@ Since S is greater than and equal to 0, the perceptron output is still 1.
 \begin{enumerate}
 \intermediatesubproblem{How is the sigmoid neuron different from the perceptron? Phrased differently, why is the sigmoid neuron more flexible than the perceptron?}
 \\\\ 
-Sigmoid neuron is different from perceptron because the sigmoid neuron outputs a value between 0 and 1 using the sigmoid activation function: \\
+The sigmoid neuron is different from perceptron because the sigmoid neuron outputs a value between 0 and 1 using the sigmoid activation function: \\
 \centerline{$\sigma(x) = \frac{1}{1+e^-x}$}\\
-Sigmoid neuron is more flexible than the perceptron because it makes smooth changes instead of sudden jumps, which helps in learning complex patterns better!
-\newpage 
+The sigmoid neuron is more flexible than the perceptron because it makes smooth changes instead of sudden jumps, which helps in learning complex patterns better!
 
 \intermediatesubproblem{Allow us to reconsider the neural network above:
 
 \begin{figure}[h!]
     \centering
-\includegraphics[width=0.75\linewidth]{Neural_Network_1.png}
+\includegraphics[width=0.25\linewidth]{Neural_Network_1.png}
 \end{figure}
 
 Suppose the activation function is now the sigmoid function. Compute the output of the sigmoid neuron
 when $x_1 = 1, x_2 = 0, x_3 = 1$. (This is the same input as before in Problem 2 part $(c)$).}
 \\\\
-\centerline{\underline{Weights:} $w_1 =0.1, w_2 =0.4,w3 =0.8$ }
+\centerline{\underline{Weights:} $w_1 =0.1, w_2 =0.4,w_3 =0.8$ }
 \centerline{\underline{Wighted Sum Formula:} $S = w_1x_1+w_2x_2+w_3+x_3+b_{1}^{[1]}$}
 \centerline{\underline{Weighted Sum:} $S = (1*0.1)+(0*0.4)+(1*0.8)+(-0.89)$}\\
 \centerline{\underline{Weight Sum:} $S=0.01$}
@@ -129,37 +125,44 @@ when $x_1 = 1, x_2 = 0, x_3 = 1$. (This is the same input as before in Problem 2
 \vspace{1mm}
 
 \intermediatesubproblem{Allow us to now show that a small change in the weights/bias produces small changes in the output. Suppose we have the same sigmoid neuron as outlined above where $x_1 = 1, x_2 = 0, x_3 = 1$ and this time, $b_{1}^{[1]} = -0.9 $. What is the sigmoid neuron's output now?}
-
+\\\\
+\centerline{\underline{Weights:} $w_1 =0.1, w_2 =0.4,w_3 =0.8$ }
+\centerline{\underline{Wighted Sum Formula:} $S = w_1x_1+w_2x_2+w_3+x_3+b_{1}^{[1]}$}
+\centerline{\underline{Weighted Sum:} $S = (1*0.1)+(0*0.4)+(1*0.8)+(-0.9)$}\\
+\centerline{\underline{Weight Sum:} $S=0.00$}
+\\ \centerline{$\sigma(0) = \frac{1}{1+e^{(0)}} = 0.5$} \\ 
+\centerline{The output of the sigmoid neuron is 0.5.}
 \vspace{5mm}
-
 
 \intermediatesubproblem{What conclusion can you draw regarding small changes in the weights/bias with the perceptron versus the sigmoid neuron?}
-\vspace{5mm}
-
+\\\\
+The small change in the weights/bias with the perception versus the sigmoid neuron is that if the perception has a small change in bias or weights, it can cause the output to flip from 0 to 1. A small change in the weight of a sigmoid neuron would result in little changes in the output. 
 \intermediatesubproblem{Compute $a_{1}^{[1]}$ in the neural network below. Assume that $x_1 = 1.2, x_2 = 0.05$, $x_3 = 0.6530$ and use the sigmoid function for the activation function. }
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.8\linewidth]{NN2.png}
 \end{figure}
 
-\vspace{20mm}
+\vspace{5mm}
 
 \intermediatesubproblem{Compute $a_{2}^{[1]}$. Assume that $x_1 = 1.2, x_2 = 0.05$, $x_3 = 0.6530$ and use the sigmoid function for the activation function.}
+\\\\\underline{Weights (layer 1 to Hidden Layer 1 and 2):}\\ $w_{11}^{[1]} =0.3 , w_{12}^{[1]} =0.1 , w_{13}^{[1]}=0.5 , w_{21}^{[1]}=0.2 ,w_{22}^{[1]}=0.6 , w_{23}^{[1]} =0.15$ \\
+\underline{Biases (Hidden Layer 1 and 2):}\\
+$b_{1}^{[1]}=0.8 , b_{2}^{[1]} =-1.4$\\
+\underline{Weights (Hidden Layer to Output Layer):}//
+$w_{11}^{[2]} =0.2 , w_{12}^{[2]} =0.6$\\
 
-\vspace{30mm}
+\vspace{5mm}
 
 \intermediatesubproblem{Compute the output of the above network, $y$. Assume that $x_1 = 1.2, x_2 = 0.05$, $x_3 = 0.6530$ and use the sigmoid function for the activation function.}
 \end{enumerate}
-
-
-\newpage 
 
 \problem{In this question we will review greyscaling.}
 
 \begin{enumerate}
 \easysubproblem{What is a pixel?}
 
-\vspace{20mm}
+\vspace{5mm}
 
 \easysubproblem{True or False? The RGB color model states that red, green, and blue can be combined in different ways to produce a wide range of colors.}
 
