--- a/HW2.tex
+++ b/HW2.tex
@@ -146,11 +146,14 @@ The small change in the weights/bias with the perception versus the sigmoid neur
 \vspace{5mm}
 
 \intermediatesubproblem{Compute $a_{2}^{[1]}$. Assume that $x_1 = 1.2, x_2 = 0.05$, $x_3 = 0.6530$ and use the sigmoid function for the activation function.}
-\\\\\underline{Weights (layer 1 to Hidden Layer 1 and 2):}\\ $w_{11}^{[1]} =0.3 , w_{12}^{[1]} =0.1 , w_{13}^{[1]}=0.5 , w_{21}^{[1]}=0.2 ,w_{22}^{[1]}=0.6 , w_{23}^{[1]} =0.15$ \\
-\underline{Biases (Hidden Layer 1 and 2):}\\
-$b_{1}^{[1]}=0.8 , b_{2}^{[1]} =-1.4$\\
-\underline{Weights (Hidden Layer to Output Layer):}//
-$w_{11}^{[2]} =0.2 , w_{12}^{[2]} =0.6$\\
+\\\\\centerline{\underline{Weights (layer 1 to Hidden Layer 1 and 2):}}\\ \centerline{$w_{11}^{[1]} =0.3 , w_{12}^{[1]} =0.1 , w_{13}^{[1]}=0.5 , w_{21}^{[1]}=0.2 ,w_{22}^{[1]}=0.6 , w_{23}^{[1]} =0.15$} \\
+\centerline{\underline{Biases (Hidden Layer 1 and 2):}}\\
+\centerline{$b_{1}^{[1]}=0.8 , b_{2}^{[1]} =-1.4$}\\
+\centerline{\underline{Weights (Hidden Layer to Output Layer):}}\\
+\centerline{$w_{11}^{[2]} =0.2 , w_{12}^{[2]} =0.6$}\\
+\centerline{\underline{Bias (Output Layer):}}\\
+\centerline{$b_{1}^{[2]}=-1.447$} \\
+\centerline{\underline{Formula:} $z_{2}^{[1]}=x_1w_{21}^{1}+x_1w_{22}^{1}+x_1w_{23}^{1}+b_{2}^{[1]}$}
 
 \vspace{5mm}
 
