--- a/HW3.tex
+++ b/HW3.tex
@@ -289,13 +289,11 @@ The angle $\theta$ between the vectors is acute.
 The vectors are orthogonal. 
 \vspace{2mm}
 
-\easysubproblem{If $\vect{u}^T \vect{v} < 0$ then what can we say about the angle between $\vect{u}$ and $\vect{v}$?}
-
-\vspace{10mm}
-
-\intermediatesubproblem{Prove that $\vect{u}^T \vect{v} = \vect{v}^T \vect{u}$}. 
-
-\newpage
+\easysubproblem{If $\vect{u}^T \vect{v} < 0$ then what can we say about the angle between $\vect{u}$ and $\vect{v}$?}\\\\
+The angle $\theta$ between the vectors is obtuse.
+\vspace{2mm}
+\intermediatesubproblem{Prove that $\vect{u}^T \vect{v} = \vect{v}^T \vect{u}$}. \\\\
+ Both are scalar sums: $\sum\vect{u_iv_i}=\sum\vect{v_iu_i}$, so they are always equal- the dot product is commutative. 
 
 \easysubproblem{Suppose  $\vect{u_1} = \begin{bmatrix}
 1 \\
@@ -305,9 +303,8 @@ The vectors are orthogonal.
 5 \\
 -2 \\
 1
-\end{bmatrix} $. Show that $\vect{u_1}$ and $\vect{u_2} $ are orthogonal to each other.}
-
-
+\end{bmatrix} $. Show that $\vect{u_1}$ and $\vect{u_2} $ are orthogonal to each other.}\\\\
+$\vect{u_1}$
 
 \vspace{40mm}
 
